--- a/prodigy_wd_01/index.html
+++ b/prodigy_wd_01/index.html
@@ -298,7 +298,7 @@
             </div>
 
             <p class="footer-copy">
-                <a href="https://github.com/satyamrai0510" target="_blank" class="footer-copy-link">&#169; Beats. All right reserved</a>
+                <a href="https://github.com/vivek21BBTCS" target="_blank" class="footer-copy-link">&#169; Beats. All right reserved</a>
             </p>
         </footer>
 
